--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -20,13 +20,13 @@ jobs:
               -d @${{ github.workspace }}/.github/workflows/payload.json
       - name: Wait for destroy
         run: sleep 15m # we are lazy and don´t check when the run actually finished
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-2
-      - uses: coinmama/actions-awsnuke@v1
-        with:
-          aws_nuke_version: "2.21.2"
-          aws_nuke_config: aws-nuke.yml
+      # - name: Configure AWS Credentials
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: eu-central-2
+      # - uses: coinmama/actions-awsnuke@v1
+      #   with:
+      #     aws_nuke_version: "2.21.2"
+      #     aws_nuke_config: aws-nuke.yml
